syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.core.grpcdemo.proto";
option java_outer_classname = "ProductProto";

package product;

service ProductService {
  rpc CreateProduct(CreateProductRequest) returns (ProductResponse);
  rpc GetProduct(GetProductRequest) returns (ProductResponse);
  rpc UpdateProduct(UpdateProductRequest) returns (ProductResponse);
  rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse);
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
}

message Product {
  int64 id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 quantity = 5;
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
  double price = 3;
  int32 quantity = 4;
}

message GetProductRequest {
  int64 id = 1;
}

message UpdateProductRequest {
  int64 id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 quantity = 5;
}

message DeleteProductRequest {
  int64 id = 1;
}

message ProductResponse {
  Product product = 1;
  string message = 2;
}

message DeleteProductResponse {
  bool success = 1;
  string message = 2;
}

message ListProductsRequest {
  int32 page = 1;
  int32 size = 2;
}

message ListProductsResponse {
  repeated Product products = 1;
  int32 total = 2;
}